# ray_tracing

./: CMakeLists.txt
src/: hittable.h  main.cc  ray.h  vec3.h
